<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hikeathon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Chit Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">RegisterActivity</string>


    <string name="password">password</string>
    <string name="username">username</string>
    <string name="server">\@hackathon.hike.in</string>
    <string name="register">register</string>
    <string name="add_friend">Add Friend</string>
    <string name="log_out">Log out</string>
    <string name="login">login</string>
</resources>
